--- a/src/app/Pages/page2/page2.html
+++ b/src/app/Pages/page2/page2.html
@@ -1,2 +1,3 @@
 <app-title [titlePage] = "'My Second page'"></app-title>
-<p> that's page 2 </p>
+<!--Displays the saved message-->
+<p>Saved Message: {{savedMessage}}</p>
