--- a/src/app/Components/title/title.html
+++ b/src/app/Components/title/title.html
@@ -1,7 +1,10 @@
 <div class = "banner">
   <h1> {{titlePage}} </h1>
-  <ul class ="nav-list">
-   <a routerLink = "/">Page 1</a>
-    <a routerLink = "Page2">Page 2</a>
-  </ul>
+  <div class ="nav-list">
+
+    <a routerLink = "/">Page 1</a>
+    <a routerLink = "/Page2">Page 2</a>
+    <a routerLink = "/AndyPage">Andy Page</a>
+
+  </div>
 </div>
