continuing Andy's examples

--- a/src/app/Components/title/title.html
+++ b/src/app/Components/title/title.html
@@ -5,6 +5,7 @@
     <a routerLink = "/">Page 1</a>
     <a routerLink = "/Page2">Page 2</a>
     <a routerLink = "/AndyPage">Andy Page</a>
+    <a routerLink = "/Todolist"> To do list </a>
 
   </div>
 </div>
